# asdf-overlay

./: .gitignore  .gitmodules  .npmrc  404.html  CODE_OF_CONDUCT.md  Cargo.toml  README.md  asdf_overlay-layer.json  eslint.config.js  eslint.config.mjs  index.html  introduction.html  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  print.html  release.toml  rust-toolchain.toml  searchindex.js  toc.html  toc.js  tsconfig.base.json  tsconfig.build.json  tsconfig.eslint.json  tsconfig.json
.cargo/: config.toml
.github/: FUNDING.yml
.github/workflows/: clippy-check.yml  deploy.yml  gh-pages.yml  publish.yml  rustfmt-pr.yml  rustfmt-push.yml
asdf-overlay-node/native/: Cargo.toml
asdf-overlay-node/native/src/: lib.rs
asdf-overlay-node/src/: index.ts  load.cts
crates/client/: Cargo.toml
crates/client/examples/: example.rs
crates/client/src/: client.rs  injector.rs  lib.rs  prelude.rs  surface.rs  ty.rs
crates/common/: Cargo.toml
crates/common/src/: cursor.rs  event.rs  ipc.rs  key.rs  lib.rs  message.rs  request.rs  size.rs
crates/common/src/event/: input.rs
crates/common/src/ipc/: client.rs  server.rs
crates/dll/: Cargo.toml
crates/dll/src/: dbg.rs  lib.rs  server.rs  vulkan_layer.rs
crates/event/: Cargo.toml
crates/event/src/: input.rs  lib.rs
crates/hook/: Cargo.toml  build.rs
crates/hook/src/: lib.rs  pregenerated-x64.rs  pregenerated-x86.rs  pregenerated.rs
crates/node/: Cargo.toml
crates/node/src/: conv.rs  lib.rs  util.rs
crates/overlay/: Cargo.toml  build.rs  detours_wrapper.h
crates/overlay/resources/: cursors.rc
crates/overlay/src/: app.rs  backend.rs  dbg.rs  event_sink.rs  hook.rs  interop.rs  layout.rs  lib.rs  reader.rs  renderer.rs  resources.rs  surface.rs  texture.rs  types.rs  util.rs  vulkan_layer.rs
crates/overlay/src/backend/: cx.rs  opengl.rs  proc.rs  render.rs  renderer.rs  renderers.rs  window.rs  wndproc.rs
crates/overlay/src/backend/cx/: dx12.rs
crates/overlay/src/backend/render/: cx.rs
crates/overlay/src/backend/render/cx/: callback.rs  dx12.rs
crates/overlay/src/backend/window/: cursor.rs  proc.rs
crates/overlay/src/hook/: dx.rs  dx9.rs  dxgi.rs  message.rs  opengl.rs  proc.rs  util.rs  vulkan.rs
crates/overlay/src/hook/dx/: dx11.rs  dx12.rs  dx9.rs  dxgi.rs  util.rs
crates/overlay/src/hook/dx/dx12/: rtv.rs  util.rs
crates/overlay/src/hook/dx/dxgi/: callback.rs
crates/overlay/src/hook/opengl/: cx.rs  data.rs  hdc.rs  util.rs
crates/overlay/src/hook/proc/: input.rs
crates/overlay/src/hook/proc/input/: util.rs
crates/overlay/src/renderer/: dx.rs  dx11.rs  dx12.rs  dx9.rs  opengl.rs  vulkan.rs
crates/overlay/src/renderer/dx/: shaders.rs
crates/overlay/src/renderer/dx/shaders/: texture.hlsl
crates/overlay/src/renderer/dx11/shaders/: texture.hlsl
crates/overlay/src/renderer/dx12/: buffer.rs  fence.rs  guard.rs  rtv.rs  sync.rs  texture.rs
crates/overlay/src/renderer/dx12/shaders/: texture.hlsl
crates/overlay/src/renderer/opengl/: cx.rs  data.rs
crates/overlay/src/renderer/opengl/shaders/: texture.frag  texture.vert
crates/overlay/src/renderer/vulkan/: frame.rs  shaders.rs
crates/overlay/src/renderer/vulkan/shaders/: texture.vert
crates/overlay/src/vulkan_layer/: device.rs  instance.rs
crates/overlay/src/vulkan_layer/device/: queue.rs  swapchain.rs
crates/overlay/src/vulkan_layer/instance/: physical_device.rs  surface.rs
crates/vulkan-layer/: Cargo.toml
crates/vulkan-layer/src/: device.rs  instance.rs  lib.rs  map.rs  renderer.rs
crates/vulkan-layer/src/device/: queue.rs  swapchain.rs
crates/vulkan-layer/src/instance/: physical_device.rs  surface.rs
crates/vulkan-layer/src/renderer/: frame.rs  shaders.rs
crates/vulkan-layer/src/renderer/shaders/: texture.frag  texture_fs.spv  texture_vs.spv
developer-guide/: debugging.html  prerequirements.html  workspace-setup.html
doc/: book.toml
doc/src/: SUMMARY.md  introduction.md
doc/src/developer-guide/: debugging.md  prerequirements.md  workspace-setup.md
doc/src/user-guide/: concepts.md  installation.md  node.md  rust.md
doc/src/user-guide/node/: attaching.md  closing.md  input-control.md  installation.md  layout-surface-connection.md  obtaining-window-info.md  surface-connection-layout.md
doc/src/user-guide/rust/: installation.md
examples/node/electron-overlay/: main.js  package.json
examples/node/ingame-browser/: app.js  electron.vite.config.ts  package.json  tsconfig.json
examples/node/ingame-browser/main/: index.ts  input.ts
examples/rust/input-capture/: Cargo.toml
examples/rust/input-capture/src/: main.rs
examples/rust/noise-rectangle/: Cargo.toml
examples/rust/noise-rectangle/src/: main.rs
lib/: addon.d.ts  index.d.ts  index.js  input.d.ts  input.js  types.d.ts  types.js  util.d.ts  util.js
native/: Cargo.toml
native/src/: conv.rs  event.rs  lib.rs  serialize.rs  util.rs  wrapper.rs
src/: addon.ts  index.ts  input.ts  types.ts  util.ts
user-guide/: concepts.html  installation.html  node.html  rust.html
user-guide/node/: attaching.html  closing.html  input-control.html  installation.html  layout-surface-connection.html  obtaining-window-info.html
user-guide/rust/: installation.html
xtask/: Cargo.toml
xtask/src/: main.rs
