[workspace]
members = ["./crates/*", "./xtask", "./examples/rust/*"]
resolver = "2"

[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"

[workspace.package]
version = "0.8.1"
edition = "2024"
license = "MIT OR Apache-2.0"
repository = "https://github.com/storycraft/asdf-overlay"

[workspace.dependencies]
asdf-overlay = { version = "0.8.1", path = "./crates/overlay" }
asdf-overlay-hook = { version = "0.8.1", path = "./crates/hook" }
asdf-overlay-client = { version = "0.8.1", path = "./crates/client" }
asdf-overlay-common = { version = "0.8.1", path = "./crates/common" }

tokio = "1.44.2"

[workspace.dependencies.windows]
version = "0.61.1"
