[workspace]
members = ["./crates/*", "./xtask", "./examples/rust/*"]
resolver = "2"

[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"

[workspace.package]
version = "0.8.3"
edition = "2024"
license = "MIT OR Apache-2.0"
repository = "https://github.com/storycraft/asdf-overlay"

[workspace.dependencies]
asdf-overlay = { version = "0.8.3", path = "./crates/overlay" }
asdf-overlay-dll = { version = "0.8.3", path = "./crates/dll" }
asdf-overlay-hook = { version = "0.8.3", path = "./crates/hook" }
asdf-overlay-client = { version = "0.8.3", path = "./crates/client" }
asdf-overlay-common = { version = "0.8.3", path = "./crates/common" }
asdf-overlay-event = { version = "0.8.3", path = "./crates/event" }
asdf-overlay-vulkan-layer = { version = "0.8.3", path = "./crates/vulkan-layer" }

tokio = "1.47.1"

[workspace.dependencies.windows]
version = "0.61.1"
