[workspace]
members = [
    "./crates/*",
    "./xtask",
    "./examples/rust/*",
    "./packages/core/native",
]
resolver = "2"

[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"

[workspace.package]
version = "1.0.4"
edition = "2024"
license = "MIT OR Apache-2.0"
repository = "https://github.com/storycraft/asdf-overlay"
authors = ["storycraft <storycraft@pancake.sh>"]
rust-version = "1.88"

[workspace.dependencies]
asdf-overlay = { version = "1.0.4", path = "./crates/overlay" }
asdf-overlay-dll = { version = "1.0.4", path = "./crates/dll" }
asdf-overlay-hook = { version = "1.0.4", path = "./crates/hook" }
asdf-overlay-client = { version = "1.0.4", path = "./crates/client" }
asdf-overlay-common = { version = "1.0.4", path = "./crates/common" }
asdf-overlay-event = { version = "1.0.4", path = "./crates/event" }
asdf-overlay-vulkan-layer = { version = "1.0.4", path = "./crates/vulkan-layer" }

tokio = "1.47.1"

[workspace.dependencies.windows]
version = "0.61.1"
