[package]
name = "asdf-overlay-node"
version.workspace = true
edition.workspace = true
license.workspace = true
authors = ["storycraft <storycraft@pancake.sh>"]

[lib]
crate-type = ["cdylib"]

[dependencies]
asdf-overlay-common = { workspace = true }
asdf-overlay-client = { workspace = true }
tokio = { workspace = true, features = ["full"] }

neon = "1"
parking_lot = "0.12.3"
anyhow = "1.0.97"
once_cell = "1.21.3"
dashmap = "6.1.0"
rustc-hash = "2.1.1"
