[package]
name = "asdf-overlay-client"
description = "Asdf Overlay Injector & Client"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
authors = ["storycraft <storycraft@pancake.sh>"]
readme = "../../README.md"

[dependencies]
asdf-overlay-common = { workspace = true }
tokio = { workspace = true, features = ["macros", "time"] }

anyhow = "1.0.97"
dll-syringe = { workspace = true, features = [
    "into-x86-from-x64",
    "syringe",
    "rpc-payload",
] }
scopeguard = "1.2.0"

[dependencies.windows]
version = "0.61.1"
features = [
    "Win32_Foundation",
    "Win32_Graphics_Dxgi",
    "Win32_Graphics_Dxgi_Common",
    "Win32_Security",
    "Win32_Graphics_Direct3D",
    "Win32_Graphics_Direct3D11"
]

[package.metadata.docs.rs]
targets = ["x86_64-pc-windows-msvc"]
