[package]
name = "asdf-overlay-client"
description = "Asdf Overlay Client"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
authors = ["storycraft <storycraft@pancake.sh>"]
readme = "../../README.md"

[features]
default = ["surface"]
surface = ["dep:windows"]

[dependencies]
asdf-overlay-common = { workspace = true }
asdf-overlay-event = { workspace = true, features = ["bincode"] }
tokio = { workspace = true, features = ["macros", "time", "net"] }

bincode = "2.0.1"
dashmap = "6.1.0"
ntapi = "0.4.1"
anyhow = "1.0.97"
scopeguard = "1.2.0"
bytemuck = "1.23.1"
goblin = { version = "0.10.0", default-features = false, features = [
    "std",
    "pe32",
    "pe64",
] }

[dependencies.windows]
workspace = true
optional = true
features = [
    "Win32_Foundation",
    "Wdk_Foundation",
    "Win32_Security",
    "Win32_System_Threading",
    "Win32_System_LibraryLoader",
    "Win32_System_ProcessStatus",
    "Win32_Security_Authorization",
    "Win32_System_SystemServices",
    "Win32_System_SystemInformation",
    "Win32_System_Memory",
    "Win32_Graphics",
    "Win32_Graphics_Dxgi",
    "Win32_Graphics_Dxgi_Common",
    "Win32_Graphics_Direct3D",
    "Win32_Graphics_Direct3D11",
]

[package.metadata.docs.rs]
targets = ["x86_64-pc-windows-msvc"]
