[package]
name = "asdf-overlay-common"
description = "Asdf Overlay Ipc messages, client and server"
version.workspace = true
edition.workspace = true
license.workspace = true
authors = ["storycraft <storycraft@pancake.sh>"]

[dependencies]
tokio = { workspace = true, features = ["io-util"] }

bincode = { version = "2.0.1", features = ["derive"] }
parity-tokio-ipc = "0.9.0"
anyhow = "1.0.97"
parking_lot = "0.12.3"
dashmap = "6.1.0"
futures-core = "0.3.31"
async-stream = "0.3.6"
futures = "0.3.31"
