[package]
name = "asdf-overlay-hook"
description = "Asdf Overlay Hook"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
rust-version.workspace = true
readme = "../../README.md"

[dependencies]
tracing = "0.1"

[build-dependencies]
anyhow = "1.0.97"
bindgen = "0.71.0"
cc = "1.2.18"
