[package]
name = "asdf-overlay-node"
description = "Asdf Overlay Node Addon"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
authors = ["storycraft <storycraft@pancake.sh>"]
readme = "../../README.md"

[lib]
crate-type = ["cdylib"]

[dependencies]
asdf-overlay-client = { workspace = true }
tokio = { workspace = true, features = ["full"] }

neon = "1"
parking_lot = "0.12.3"
anyhow = "1.0.97"
once_cell = "1.21.3"
dashmap = "6.1.0"
rustc-hash = "2.1.1"
mimalloc = "0.1.46"
bytemuck = "1.22.0"
futures = "0.3.31"
num = "0.4.3"

[package.metadata.docs.rs]
targets = ["x86_64-pc-windows-msvc"]
