[package]
name = "asdf-overlay"
description = "Asdf Overlay Dll"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
authors = ["storycraft <storycraft@pancake.sh>"]
readme = "../../README.md"

[lib]
crate-type = ["cdylib"]

[dependencies]
asdf-overlay-common = { workspace = true }
tokio = { workspace = true, features = ["full"] }

anyhow = "1.0.97"
parking_lot = "0.12.3"
gl = "0.14.0"
serde = "1.0.219"
tokio-util = "0.7.14"
futures = "0.3.31"
once_cell = "1.21.3"
scopeguard = "1.2.0"
dashmap = "6.1.0"
nohash-hasher = "0.2.0"
tracing-subscriber = "0.3"
ash = "0.38.0"
dll-syringe = { workspace = true, features = ["payload-utils"] }
array-util = "1.0.2"
windows-link = "0.1.1"
bytemuck = "1.22.0"
bitvec = "1"
utf16string = "0.2.0"

[dependencies.tracing]
version = "0.1"
features = ["max_level_trace", "release_max_level_off"]

[dependencies.windows]
version = "0.61.1"
features = [
    "Win32_System_Threading",
    "Win32_Foundation",
    "Win32_System_SystemServices",
    "Win32_UI_WindowsAndMessaging",
    "Win32_UI_Controls",
    "Win32_System_Console",
    "Win32_System_LibraryLoader",
    "Win32_Graphics_Gdi",
    "Win32_Graphics_OpenGL",
    "Win32_Graphics_Dxgi",
    "Win32_Graphics_Dxgi_Common",
    "Win32_Graphics_Direct3D9",
    "Win32_Graphics_Direct3D10",
    "Win32_Graphics_Direct3D11",
    "Win32_Graphics_Direct3D12",
    "Win32_Graphics_Direct3D_Fxc",
    "Win32_Security",
    "Win32_System_Diagnostics_Debug",
    "Win32_UI_Input_KeyboardAndMouse",
    "Win32_UI_Input_Ime",
]

[build-dependencies]
camino = "1.1.9"
anyhow = "1.0.97"
gl_generator = "0.14.0"
bindgen = "0.71.0"
cc = "1.2.18"
winres = "0.1.12"

[package.metadata.docs.rs]
targets = ["x86_64-pc-windows-msvc"]
