[package]
name = "asdf-overlay"
description = "Asdf Overlay Dll"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
authors = ["storycraft <storycraft@pancake.sh>"]
readme = "../../README.md"

[dependencies]
asdf-overlay-common = { workspace = true }
asdf-overlay-event = { workspace = true }
asdf-overlay-hook = { workspace = true }

tracing = "0.1"
anyhow = "1.0.97"
parking_lot = { version = "0.12.3", features = ["hardware-lock-elision"] }
once_cell = "1.21.3"
scopeguard = "1.2.0"
dashmap = "6.1.0"
nohash-hasher = "0.2.0"
ash = { version = "0.38.0", default-features = false, features = ["std"] }
array-util = "1.0.2"
windows-link = "0.1.1"
bytemuck = "1.22.0"
utf16string = "0.2.0"
bitflags = "2.9.1"
arc-swap = "1.7.1"
sync_wrapper = "1.0.2"

[dependencies.windows]
workspace = true
features = [
    "Win32_System_Threading",
    "Win32_Foundation",
    "Win32_Security",
    "Win32_Security_Authorization",
    "Win32_System_SystemServices",
    "Win32_UI_WindowsAndMessaging",
    "Win32_UI_Controls",
    "Win32_System_Console",
    "Win32_System_LibraryLoader",
    "Win32_Graphics_Gdi",
    "Win32_Graphics_OpenGL",
    "Win32_Graphics_Dxgi",
    "Win32_Graphics_Dxgi_Common",
    "Win32_Graphics_Direct3D",
    "Win32_Graphics_Direct3D9",
    "Win32_Graphics_Direct3D10",
    "Win32_Graphics_Direct3D11",
    "Win32_Graphics_Direct3D12",
    "Win32_Security",
    "Win32_UI_Input_KeyboardAndMouse",
    "Win32_UI_Input_Ime",
    "Win32_Globalization"
]

[build-dependencies]
anyhow = "1.0.97"
gl_generator = "0.14.0"
winres = "0.1.12"

[package.metadata.docs.rs]
targets = ["x86_64-pc-windows-msvc"]
